--- a/BarkQuiz/Base.lproj/Main.storyboard
+++ b/BarkQuiz/Base.lproj/Main.storyboard
@@ -21,9 +21,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8S-hL-9Eo">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8S-hL-9Eo">
                                 <rect key="frame" x="87.5" y="100" width="200" height="100"/>
-                                <state key="normal" backgroundImage="Afghan-Hound"/>
+                                <state key="normal" image="Afghan-Hound"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rIZ-se-jYP">
                                 <rect key="frame" x="87.5" y="230" width="200" height="100"/>
